# cs6120

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: cfg.rs  lib.rs
common/src/cfg/: ssa.rs
dataflow_analysis/: Cargo.toml
dataflow_analysis/src/: lib.rs
driver/: Cargo.toml
driver/src/: main.rs
lecture2/: Cargo.toml
lecture2/src/: main.rs
optimizations/: Cargo.toml
optimizations/src/: lib.rs  local_dead_code_elimination.rs  local_value_numbering.rs  loop_invariant_code_motion.rs
