[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
indoc = "2.0.5"
serde_json = "1.0"
smallstr = "0.3.0"
smallvec = "1.13.2"

[dependencies.bril-rs]
version = "0.1.0"
path = "../bril/bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]

[dependencies.bril2json]
version      = "0.1.0"
path         = "../bril/bril-rs/bril2json"
