[package]
name = "optimizations"
version = "0.1.0"
edition = "2021"

[dependencies]
brilirs = { version = "0.1.0", path = "../bril/brilirs" }
clap = "4.5.20"
common = { version = "0.1.0", path = "../common" }
indoc = "2.0.5"
smallstr = "0.3.0"
smallvec = "1.13.2"

[dependencies.bril-rs]
version = "0.1.0"
path = "../bril/bril-rs"
features = ["ssa", "memory", "float", "speculate", "position"]
